<resources>
    <string name="app_name" translatable="false">LightEmail</string>
    <string name="app_label" translatable="false">LightEmail</string>
    <string name="app_copyright" translatable="false">Copyright Ⓒ 2026 by R. Timmermans\nCopyright Ⓒ 2025 by Jagadeesh K\nCopyright Ⓒ 2018 by M. Bokhorst\nCopyright Ⓒ 2018-2020 by Distopico (dystopia project) and contributors</string>
    <string name="app_eula" translatable="false">This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version. This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See theGNU General Public License for more details. You should have received a copy of the GNU General Public License along with this program. If not, see http://www.gnu.org/licenses.</string>
    <string name="fingerprint" translatable="false">BCB07BD93B29C1959C15F1CF6C3A2619BAF7A17</string>
    <string name="channel_service">Service</string>
    <string name="channel_notification">Notifications</string>
    <string name="channel_error">Errors</string>
    <plurals name="title_notification_synchronizing">
        <item quantity="one">Synchronizing %1$d account</item>
        <item quantity="other">Synchronizing %1$d accounts</item>
    </plurals>
    <plurals name="title_notification_operations">
        <item quantity="one">%1$d operation pending</item>
        <item quantity="other">%1$d operations pending</item>
    </plurals>
    <plurals name="title_notification_unseen">
        <item quantity="one">%1$d new message</item>
        <item quantity="other">%1$d new messages</item>
    </plurals>
    <plurals name="title_notification_unsent">
        <item quantity="one">%1$d unsent message</item>
        <item quantity="other">%1$d unsent messages</item>
    </plurals>
    <string name="title_notification_failed">\'%1$s\' failed</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_answers">Reply templates</string>
    <string name="menu_operations">Operations</string>
    <string name="menu_legend">Legend</string>
    <string name="menu_faq">FAQ/support</string>
    <string name="menu_privacy">Privacy</string>
    <string name="menu_about">About</string>
    <string name="title_website">Website</string>
    <string name="title_source_code">Source code</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_rate">Rate this app</string>
    <string name="menu_other">Other apps</string>
    <string name="title_privacy">Privacy policy</string>
    <string name="title_privacy_description"><b>LightEmail</b> does not collect any information, does not require unnecessary permissions and is <b>100% Free Software</b>.</string>
    <string name="title_permissions"><b>Permissions are needed and why</b></string>
    <string name="title_permissions_list"><b>• have full network access</b> (INTERNET): \nto send and receive email <b>\n• view network connections</b> (ACCESS_NETWORK_STATE): \nto monitor internet connectivity changes <b>\n• run at startup</b> (RECEIVE_BOOT_COMPLETED): \nto start monitoring on device start <b>\n• foreground service</b> (FOREGROUND_SERVICE): \nto run a foreground service on Android 9 Pie and later <b>\n• prevent device from sleeping</b> (WAKE_LOCK): \nto keep the device awake while synchronizing messages <b>\n• [Optional] read your contacts</b> (READ_CONTACTS): \nto autocomplete addresses and to show photos <b>\n• [Optional] find accounts on the device</b> (GET_ACCOUNTS): \nto use OAuth instead of passwords</string>
    <string name="title_agree">I agree</string>
    <string name="title_disagree">I disagree</string>
    <string name="title_version">Version %1$s</string>
    <string name="title_list_accounts">Accounts</string>
    <string name="title_list_identities">Identities</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_identity">Edit identity</string>
    <string name="title_edit_folder">Edit folder</string>
    <string name="title_setup">Setup</string>
    <string name="title_setup_export">Export settings</string>
    <string name="title_setup_import">Import settings</string>
    <string name="title_setup_export_do">Accounts and identities will be exported without passwords</string>
    <string name="title_setup_import_do">Imported accounts will be added, not overwritten</string>
    <string name="title_setup_exported">Settings exported</string>
    <string name="title_setup_imported">Settings imported</string>
    <string name="title_setup_account">Manage accounts</string>
    <string name="title_setup_account_remark">To receive email</string>
    <string name="title_setup_identity">Manage identities</string>
    <string name="title_setup_identity_remark">To send email</string>
    <string name="title_setup_doze">Disable battery optimizations</string>
    <string name="title_setup_doze_remark">To continuously receive email (optional)</string>
    <string name="title_setup_doze_instructions">In the next dialog, select \"All apps\" at the top, select this app and select and confirm \"Don\'t optimize\"</string>
    <string name="title_setup_data">Disable data saving</string>
    <string name="title_setup_permissions">Grant permissions</string>
    <string name="title_setup_permissions_remark">To get contact information (optional)</string>
    <string name="title_setup_notifications">Manage notifications</string>
    <string name="title_setup_to_do">To do</string>
    <string name="title_setup_done">Done</string>
    <string name="title_advanced">Advanced options</string>
    <string name="title_advanced_enabled_sync">Enable sync</string>
    <string name="title_advanced_avatars">Show contact photos</string>
    <string name="title_advanced_light">Use notification light</string>
    <string name="title_advanced_browse">Browse messages on the server</string>
    <string name="title_advanced_compact">Compact message view</string>
    <string name="title_advanced_reply_quote">Quote reply</string>
    <string name="title_advanced_debug">Debug mode</string>
    <string name="title_advanced_signature_at_bottom">Signature at the bottom</string>
    <string name="title_select">Select …</string>
    <string name="title_identity_name">Your name</string>
    <string name="title_identity_email">Your email address</string>
    <string name="title_identity_reply_to">Reply to address</string>
    <string name="title_optional">Optional</string>
    <string name="title_account_linked">Linked account</string>
    <string name="title_account_name">Account name</string>
    <string name="title_account_name_hint">Used to differentiate folders</string>
    <string name="title_account_signature">Signature text</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_contact">Contact</string>
    <string name="title_contact_name">Name</string>
    <string name="title_contact_email">Email</string>
    <string name="title_contact_saved">Contact saved</string>
    <string name="title_no_contacts">No contacts found</string>
    <string name="title_account_color">Account color</string>
    <string name="title_domain">Domain name</string>
    <string name="title_autoconfig">Get settings</string>
    <string name="title_no_settings">Settings not found</string>
    <string name="title_imap">IMAP</string>
    <string name="title_smtp">SMTP</string>
    <string name="title_provider">Provider</string>
    <string name="title_custom">Custom</string>
    <string name="title_host">Host name</string>
    <string name="title_starttls">STARTTLS</string>
    <string name="title_allow_insecure">Allow insecure connections</string>
    <string name="title_port">Port number</string>
    <string name="title_user">User name</string>
    <string name="title_password">Password</string>
    <string name="title_authorize">Select account</string>
    <string name="title_authorizing">Authorizing account …</string>
    <string name="title_setup_advanced">Advanced</string>
    <string name="title_store_sent">Store sent messages (normally not needed)</string>
    <string name="title_synchronize_account">Synchronize (receive messages)</string>
    <string name="title_synchronize_identity">Synchronize (send messages)</string>
    <string name="title_primary_account">Primary (default account)</string>
    <string name="title_primary_identity">Primary (default identity)</string>
    <string name="title_keep_alive_interval">Keep alive interval (minutes)</string>
    <string name="title_check">Check</string>
    <string name="title_no_name">Name missing</string>
    <string name="title_no_email">Email address missing</string>
    <string name="title_no_account">Account missing</string>
    <string name="title_no_host">Host name missing</string>
    <string name="title_no_user">User name missing</string>
    <string name="title_no_password">Password missing</string>
    <string name="title_no_drafts">No drafts folder selected</string>
    <string name="title_no_primary_drafts">No primary account or no drafts folder</string>
    <string name="title_no_primary_archive">No primary account or no archive folder</string>
    <string name="title_no_idle">This provider does not support push messages. This will delay reception of new messages and increase battery usage.</string>
    <string name="title_no_uidplus">IMAP UIDPLUS not supported, see the FAQ</string>
    <string name="title_account_delete">Delete this account permanently?</string>
    <string name="title_identity_delete">Delete this identity permanently?</string>
    <string name="title_pop">POP is not supported</string>
    <string name="title_insecure">Insecure connections are not supported</string>
    <string name="title_folder_unseen" translatable="false">%1$s (%2$d)</string>
    <string name="title_synchronize_now">Synchronize now</string>
    <string name="title_delete_local">Delete local messages</string>
    <string name="title_empty_trash">Empty trash</string>
    <string name="title_edit_properties">Edit properties</string>
    <string name="title_empty_trash_ask">Delete all trashed messages permanently?</string>
    <string name="title_folder_name">Folder name</string>
    <string name="title_display_name">Display name</string>
    <string name="title_hide_folder">Hide from list</string>
    <string name="title_hide_folders">Hide hidden folders</string>
    <string name="title_show_folders">Show hidden folders</string>
    <string name="title_synchronize_folder">Synchronize (receive messages)</string>
    <string name="title_unified_folder">Show in unified inbox</string>
    <string name="title_after">Synchronize (days)</string>
    <string name="title_folder_exists">Folder %1$s exists</string>
    <string name="title_folder_delete">Delete folder permanently?</string>
    <string name="title_folder_unified">Unified inbox</string>
    <string name="title_folder_inbox">Inbox</string>
    <string name="title_folder_outbox">Outbox</string>
    <string name="title_folder_all">Archive</string>
    <string name="title_folder_drafts">Drafts</string>
    <string name="title_folder_trash">Trash</string>
    <string name="title_show_html">Show original</string>
    <string name="title_delete">Delete</string>
    <string name="title_more">More</string>
    <string name="title_move">Move</string>
    <string name="title_archive">Archive</string>
    <string name="title_reply">Reply</string>
    <string name="title_save">Save</string>
    <string name="title_log">Log</string>
    <string name="title_debug_info">Debug info</string>
    <string name="title_message_text_size">Message text size</string>
</resources>