<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_more"
        android:icon="@drawable/baseline_more_vert_24"
        android:title="@string/title_more" />

    <item
        android:id="@+id/action_move"
        android:icon="@drawable/baseline_folder_24"
        android:title="@string/title_move" />

    <item
        android:id="@+id/action_archive"
        android:icon="@drawable/baseline_archive_24"
        android:title="@string/title_archive" />

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/baseline_reply_24"
        android:title="@string/title_reply" />

    <item
        android:id="@+id/action_show_html"
        android:icon="@drawable/baseline_article_24"
        android:title="@string/title_show_html" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/title_delete" />
</menu>
